--- a/thesis/preface/abstract.tex
+++ b/thesis/preface/abstract.tex
@@ -2,18 +2,19 @@
 
 This thesis proposes an approach to formally verifying \glspl{isa} against higher-level properties using the model checker nuXmv.
 This was first proposed by \cite{Reid17}.
-The model checker nuXmv is used to perform information flow tracking in the architecture, thus the higher-level properties will be given by information flow properties.
+We use model checker nuXmv to perform information flow tracking in the architecture.
+Thus the higher-level properties will be given by information flow properties.
 The concepts behind information flow tracking stem from \cite{Ferraiuolo17} where \gls{ifc} was applied to \glspl{hdl}.
 
-The threat model that is assumed in this thesis is that user-mode is adversarial to machine-mode and completely compromised.
-In this scenario, it is considered whether
+The threat model that is assumed in this thesis is that user-mode is adversarial to machine-mode and wholly compromised.
+In this scenario, we consider whether
 \begin{enumerate*}[label=\alph*)]
     \item user-mode can gain access to confidential data held by machine-mode and
     \item user-mode can gain control over machine-mode.
 \end{enumerate*}
 Timing channels are excluded.
 
-We develop a simplified version of the RISC-V architecture, the MINRV8 architecture, to which aforementioned approach will be applied.
+We develop a simplified version of the RISC-V architecture, the MINRV8 architecture, to which the aforementioned approach will be applied.
 Three information flow properties applying to this architecture will be developed and verified using nuXmv.
 The result of this are eight assumptions that grant the absence of any information flow property violation by any program running on the MINRV8 architecture.
 These results are tested by showing that our approach can detect the cache poisoning \cite{Wojtczuk09} and SYSRET vulnerabilities \cite{SYSRET-vuln,Dunlap19} applying to the x86 architecture without any manual intervention besides the implementation of the vulnerabilities.
