--- a/thesis/preface/acknowledgements.tex
+++ b/thesis/preface/acknowledgements.tex
@@ -1,14 +1,14 @@
 \chapter*{\centering Acknowledgements}
 
 First and foremost, I would like to thank Alastair Reid, formerly employed at Arm Ltd., now working for Google Research, for all the time and help he put into this thesis.
-I was very lucky to be able to continue the work he and I did during my internship at Arm.
+I was fortunate to be able to continue the work he and I did during my internship at Arm.
 I am very grateful that even after my internship at Arm ended, he put his free time into my work such that I was able to write a thesis in the field of formal verification.
 Without his guidance, I would not have been able to write, not even start this thesis.
 
-Secondly, I want to thank Jörn Hoffmann of the department of Technische Informatik who agreed to supervise me at the University of Leipzig.
-Without having known me or having a direct affiliation to the topic of my thesis, he allowed me to officially write this thesis and gave guidance whenever I was not sure about the direction of my thesis.
+Secondly, I want to thank Jörn Hoffmann of the department of Technische Informatik, who agreed to supervise me at the University of Leipzig.
+Without having known me or having a direct affiliation with the topic of my thesis, he allowed me to write this thesis officially and gave guidance whenever I was not sure about the direction of my thesis.
 
-Also I want to thank Prof. Dr. Andreas Maletti of the department of Algebraische und logische Grundlagen der Informatik.
-When I was working on my thesis but was not yet supervised by someone at my university, he helped me to keep motivated whenever I felt lost because of the physical distance to my unofficial supervisor.
+Also, I want to thank Prof. Dr. Andreas Maletti of the department of Algebraische und logische Grundlagen der Informatik.
+When I was working on my thesis but did not yet have supervision by someone at my university, he helped me to keep motivated whenever I felt lost because of the physical distance to my unofficial supervisor.
 
 And last but not least, I want to thank my proofreader and friend Friedrich Schöne who not only read my thesis but also contributed towards it by friendship and exchange.
