--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -16,38 +16,38 @@ The relation between these two approaches often is illustrated by a famous quote
     Program testing can be used to show the presence of bugs, but never to show their absence!
 \end{displaycquote}
 
-Whereas testing is a quick and efficient way of finding bugs in the development process of a system, formal verification is a more complex but complete (in regard to the properties verified) process of proving the absence of bugs.
+Whereas testing is a quick and efficient way of finding bugs in the development process of a system, formal verification is a more complex but complete (regarding the properties verified) process of proving the absence of bugs.
 
 In \citetitle{Reid17} \cite{Reid17}, \citeauthor{Reid17} stressed the need of verifying specifications themselves as opposed to simply verifying implementations against specifications.
-To tackle this, he proposed to verify specifications against higher-level properties and used this methodology to verify the specification of the ARM M-Class specification.
+To tackle this, he proposed to check specifications against higher-level properties and used this methodology to verify the specification of the ARM M-Class specification.
 
-An intuition for this line of research is given by \citeauthor{Reid17} with the following analogy: think of a specification as the law and an implementation as some action that is touched by the law.
-In our everyday life, we rely on everybody to obey the law in their actions.
+The following analogy by \citeauthor{Reid17} gives an intuition for this line of research: think of a specification as the law and an implementation as some action that is touched by the law.
+In our everyday life, we rely on everybody to obey the law in their activities.
 If we want to find out whether some action is just (correct), it is checked whether it violates the law.
-The same is done for implementations.
+The same applies to implementations.
 If we want to check whether some implementation is correct (just), it is checked whether it complies with the respective specification.
 However, every law has loopholes.
 Sometimes what \textit{we want} from the law does not align with what it actually says.
-This is because the law is big and complex and some cases get overlooked.
-Therefore, there not only is the law but also the constitution that expresses the very basis of what must be always guaranteed by each and every statute of the law.
-To carry this analogy on, in the world of formal verification, the constitution is given by the higher-level properties the specification itself is verified against.
+This is because the law is big and complex, and some cases get overlooked.
+Therefore, there also is a constitution that expresses the fundamental properties of each and every statute of the law.
+To carry this analogy over to the world of formal verification: the constitution is given by the higher-level properties the specification itself is verified against.
 
-In this thesis, two lines of \citeauthor{Reid17}'s research will be continued: \begin{enumerate*}[label=\alph*)]
+In this thesis, we continue two lines of \citeauthor{Reid17}'s research: \begin{enumerate*}[label=\alph*)]
     \item the main contribution of this thesis also is to propose an approach for verifying specifications against higher-level properties and
     \item this methodology will be applied to an \gls{isa} specification as well.
 \end{enumerate*}
 
 The higher-level properties an \gls{isa} will be verified against, mainly stem from the work of \citeauthor{Ferraiuolo17} in \citetitle{Ferraiuolo17} \cite{Ferraiuolo17}.
 As the title indicates, their work also falls into the domain of verification; the authors propose a new way of verifying \gls{hdl} implementations.
-The core idea here is to use a a type system in which types serve as security annotation of information.
-By applying typing rules to expressions in the \gls{hdl} code, these annotations are propagated and thus information is tracked through the code.
+The core idea here is to use a type system in which types serve as security annotation of information.
+By applying typing rules to expressions in the \gls{hdl} code, these annotations are propagated, and thus, information is tracked through the code.
 Certain type conversions are, however, prohibited and mark a security vulnerability.
 Thus, their approach can be summarized as tracking and controlling information flow in \gls{hdl} code.
 
 In this thesis, the idea of tracking and controlling information flow as proposed in \cite{Ferraiuolo17} will be lifted to the level of the \gls{isa} by annotating the registers of the architecture with information flow labels that are propagated by instructions.
 The information flow control that in \cite{Ferraiuolo17} was given by a type system will be implemented using high-level properties expressed in \gls{ltl} that constrain information flow very generally; thus following the line of research of \cite{Reid17}.
 
-We claim that approach that will be developed in the course of this thesis is
+We claim that the approach that will be developed in the course of this thesis is
 \begin{itemize}
     \item viable, i.e. the hardware requirements are low and the work can be reproduced with limited time investment,
     \item effective, i.e. the approach successfully uncovers issues in architectures, and
@@ -57,34 +57,34 @@ We claim that approach that will be developed in the course of this thesis is
 As a proof of concept, this approach will be applied to the RISC-V architecture using the model checker nuXmv.
 RISC-V is a recent and open-source \gls{isa} that has first been published in 2011 \cite{RiscVISA-org}.
 A basic architecture inspired by the RISC-V architecture will be modelled in nuXmv.
-nuXmv is a general purpose model checker that supports different specification languages and verification algorithms.
+nuXmv is a general-purpose model checker that supports different specification languages and verification algorithms.
 Additionally, using nuXmv allows for enhancing on the approach proposed by \citeauthor{Reid17} in a key aspect:
 In his work, \citeauthor{Reid17} focused on higher lever properties that were limited to making specifications about a single transition of the processor only, i.e. that only take the pre- and post-state of a single cycle of the processor into account.
-nuXmv on the other hand allows to consider infinite sequences of instructions, i.e. sequences of processor-transitions, of unbounded length.
+nuXmv, on the other hand, allows considering infinite sequences of instructions, i.e. sequences of processor-transitions, of unbounded length.
 
 \section{Thesis Structure}
 
 In chapter \ref{chp:background}, the background of this thesis will be introduced.
 This includes both key papers of \citeauthor{Reid17} and \citeauthor{Ferraiuolo17} as well as \glspl{isa} and model checkers.
-An introduction to \gls{risc} architectures and their ecosystem will be discussed concluding with a threat model for this thesis.
+An introduction to \gls{risc} architectures and their ecosystem will be discussed, concluding with a threat model for this thesis.
 After this, model checkers will be explained.
 At the end of this chapter, the methodology of this thesis will be discussed in more detail.
 
 In chapter \ref{chp:arch}, the RISC-V architecture and a new, minimal, RISC-V-inspired architecture called MINRV8 will be developed.
-Following up on this, it will be described how the MINRV8 architecture was implemented in nuXmv.
+It will be described how the MINRV8 architecture was implemented in nuXmv, following up on this.
 
-Chapter \ref{chp:ifc} details what information flow tracking means in context of an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa} leading finally to the higher-level properties that implement information flow control for the MINRV8 architecture.
+Chapter \ref{chp:ifc} details what information flow tracking means in the context of an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa} leading finally to the higher-level properties that implement information flow control for the MINRV8 architecture.
 
 The evaluation of our approach is given in chapter \ref{chp:results}-\ref{chp:conclusion}.
 First, we will present the results of the verification process in chapter \ref{chp:results}.
 Then, we discuss these results in chapter \ref{chp:discussion}.
-In chapter \ref{chp:related-work}, we will compare the results and the approach in general to related work and in chapter \ref{chp:conclusion}, we will give a final conclusion.
+In chapter \ref{chp:related-work}, we will compare the results and the approach in general to related work, and in chapter \ref{chp:conclusion}, we will give a final conclusion.
 
 \section{Contributions}
 
 The contributions of this thesis are twofold.
-Firstly, a general and architecture independent approach approach to verifying \glspl{isa} specifications will be developed that relies on a model checker and higher-level information flow properties.
-This approach takes unbounded numbers of instructions into account, is non-redundant and is meant to be used to detect vulnerabilities that must be combatted by architectural changes or to verify rules e.g., \glspl{os} and compilers can obey to not be themselves vulnerable.
+Firstly, a general and architecture-independent approach to verifying \glspl{isa} specifications will be developed that relies on a model checker and higher-level information flow properties.
+This approach takes unbounded numbers of instructions into account, is non-redundant and is meant to be used to detect vulnerabilities that must be combatted by architectural changes or to verify rules, e.g. \glspl{os} and compilers can obey to be not vulnerable themselves.
 These rules will be:
 \begin{itemize}
     \item practical and verifiable themselves,
@@ -94,5 +94,6 @@ These rules will be:
 
 Secondly, this approach will be applied to the MINRV8 to give a prototype.
 This prototype will be able to detect both the cache poisoning and the SYSRET vulnerability the x86 architecture was or is susceptible to.
-Whereas the cache poisoning attack was an actual vulnerability to the x86 architecture, the SYSRET vulnerability affected e.g., \glspl{os} running on Intel's version of the x86 architecture.
-Therefore, the latter vulnerability is a prime example why verifying \glspl{isa} must also take into account software running on it, hence, it is taken into account that not every vulnerability can be fixed in hardware.
+Whereas the cache poisoning attack was an actual vulnerability to the x86 architecture, the SYSRET vulnerability affected, e.g. \glspl{os} running on Intel's version of the x86 architecture.
+Therefore, the latter vulnerability is a prime example of why verifying \glspl{isa} must also take into account software running on it.
+Hence, it is taken into account that not every vulnerability can be fixed in hardware.
